2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* panel.c: (panel_gconf_profile_set_string),
	(panel_gconf_profile_set_int), (panel_gconf_profile_set_bool):
	fix more hideous leaks and re-name like below.
	(panel_session_save_panel): upd for above.

2002-02-07  Mark McLoughlin  <mark@skynet.ie>

	* menu-properties.c: (properties_apply_callback): save to gconf.

	* menu.c: (menu_save_to_gconf): check icon file is set before
	setting it in gconf.

2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* session.[ch]: (panel_session_save): don't dup string. it
	was been leaked allmost everywhere anyway.

	* applet.c: (panel_applet_clean_gconf), (panel_applet_load_list),
	(panel_applet_save_position), (panel_applet_save_to_gconf):
	* drawer.c: (drawer_save_to_gconf), (drawer_load_from_gconf):
	* launcher.c: (launcher_save_to_gconf):
	* menu.c: (menu_save_to_gconf), (menu_load_from_gconf):
	* panel-applet-frame.c: (panel_applet_frame_save_to_gconf):
	* panel.c: (panel_session_save_panel):
	* swallow.c: (swallow_save_to_gconf), (swallow_load_from_gconf):
	update for above change.

	* distribution.c: (get_distribution_info): fix warning.

2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* launcher.c: (setup_button): free icon string.

	* menu-fentry.c: (fr_check_and_reread): unref the vfs file
	info before returning.

	* menu.c: (load_icons_handler): free the icon info before
	returning.

	* panel.c: (panel_gconf_profile_get_string),
	(panel_gconf_profile_get_int), (panel_gconf_profile_get_bool):
	rename from atrociously long names.
	(panel_session_init_panels): fix loads of string leaks and try
	to tidy up a bit.

2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* panel-util.[ch]: (panel_stretch_events_to_toplevel): use
	 a flags arg instead of booleans. Simplifies things.

	* foobar-widget.c: update for above change.

2002-02-07  Mark McLoughlin  <mark@skynet.ie>

	* main.c: (main): move BONOBO_ACTIVATION_DEBUG_OUTPUT up.
